--- a/ix-lab4/lab4-1-vsm.ipynb
+++ b/ix-lab4/lab4-1-vsm.ipynb
@@ -38,9 +38,11 @@
     "from scipy.sparse import csr_matrix\n",
     "from utils import load_json, load_pkl\n",
     "\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "\n",
     "courses = load_json('data/courses.txt')\n",
     "stopwords = load_pkl('data/stopwords.pkl')\n",
-    "punctuation = '.?!,;:-–()[]{}\"/'"
+    "punctuation = '.?!,;:-–()[]{}\"/\\''"
    ]
   },
   {
@@ -68,12 +70,30 @@
    "outputs": [],
    "source": [
     "MIN = 10\n",
-    "MAX = 2000"
+    "MAX = 2000\n",
+    "\n",
+    "# note: downloading wordnet is required\n",
+    "# command: python -m nltk.downloader\n",
+    "#   in the console\n",
+    "lemmatizer = WordNetLemmatizer()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# http://locallyoptimal.com/blog/2013/01/20/elegant-n-gram-generation-in-python/\n",
+    "def find_ngrams(input_list, n):\n",
+    "    return list(zip(*[input_list[i:] for i in range(n)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +110,10 @@
     "    # transfer all to lowercase, remove punctuation\n",
     "    desc = c['description'].lower().translate(str.maketrans('', '', punctuation))\n",
     "    # remove stopwords\n",
-    "    desc_proc = [word for word in desc.split() if word not in stopwords]\n",
+    "    desc_proc = [lemmatizer.lemmatize(word, pos='v') for word in desc.split() if word not in stopwords]\n",
+    "    desc_2grams = find_ngrams(desc_proc, 2)\n",
+    "    \n",
+    "    desc_proc.extend(desc_2grams)\n",
     "    \n",
     "    # create a dict of all words\n",
     "    for w in desc_proc:\n",
@@ -113,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -158,7 +181,8 @@
     "* Put all cheacters to lowercase, to avoid the same word being considered different. Additionally, all words in stopwords.pkl are in lowercase, so this ensures all words are removed correctly\n",
     "* Remove punctuation, for the same reason as above. Only the words are important, not which one is before a comma.\n",
     "* Remove stopwords, as these don't carry any information about the content of the document\n",
-    "* filter most and least frequent words, ???"
+    "* filter most and least frequent words, as they only mess up the results when trying to find similarities between documents. commomn words will be in almost every document, rare ones in almost none.\n",
+    "* Lemmatization, to detect only words with different meaning. Identical words, such as \"is\" and \"are\" will automatically be transformed to \"be\", the same is true with multiples (\"documents\" -> \"document\")."
    ]
   },
   {
@@ -170,19 +194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['10%', '10%', '10%', '2002', '2002', '2002', '2004', '2004', '2004', '2006', '2006', '2006', '2012', '2012', '2012', '3rd', '3rd', '3rd', '40%', '40%', '40%', '50%', '50%', '50%', 'abstract', 'abstract', 'abstract', 'abstractionexploit', 'abstractionexploit', 'abstractionexploit', 'activities', 'activities', 'activities', 'al', 'al', 'al', 'algorithmic', 'algorithmic', 'algorithmic', 'architecture', 'architecture', 'architecture', 'assessment', 'assessment', 'assessment', 'assistants', 'assistants', 'assistants', 'attending', 'attending', 'attending', 'automation', 'automation', 'automation', 'basic', 'basic', 'basic', 'bibliography', 'bibliography', 'bibliography', 'bibliothèque', 'bibliothèque', 'bibliothèque', 'building', 'building', 'building', 'challenges', 'challenges', 'challenges', 'chu', 'chu', 'chu', 'chusystem', 'chusystem', 'chusystem', 'coding', 'coding', 'coding', 'combinational', 'combinational', 'combinational', 'comments', 'comments', 'comments', 'completing', 'completing', 'completing', 'complex', 'complex', 'complex', 'components', 'components', 'components', 'computation', 'computation', 'computation', 'concepts', 'concepts', 'concepts', 'concepts', 'concepts', 'concepts', 'content', 'content', 'content', 'control', 'control', 'control', 'courses', 'courses', 'courses', 'courses', 'courses', 'courses', 'creation', 'creation', 'creation', 'cs171', 'cs171', 'cs171', 'dataflow', 'dataflow', 'dataflow', 'datapath', 'datapath', 'datapath', 'de', 'de', 'de', 'definition', 'definition', 'definition', 'delivered', 'delivered', 'delivered', 'describe', 'describe', 'describe', 'description', 'description', 'description', 'description', 'description', 'description', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'design', 'designcompare', 'designcompare', 'designcompare', 'designing', 'designing', 'designing', 'developing', 'developing', 'developing', 'df', 'df', 'df', 'digital', 'digital', 'digital', 'digital', 'digital', 'digital', 'digital', 'digital', 'digital', 'digital', 'digital', 'digital', 'digital', 'digital', 'digital', 'digital', 'digital', 'digital', 'discreteevent', 'discreteevent', 'discreteevent', 'ed', 'ed', 'ed', 'eda', 'eda', 'eda', 'eda', 'eda', 'eda', 'ee334', 'ee334', 'ee334', 'ee397', 'ee397', 'ee397', 'efficiency', 'efficiency', 'efficiency', 'efficient', 'efficient', 'efficient', 'electronic', 'electronic', 'electronic', 'electronic', 'electronic', 'electronic', 'elements', 'elements', 'elements', 'elements', 'elements', 'elements', 'elsevier', 'elsevier', 'elsevier', 'embedded', 'embedded', 'embedded', 'embedded', 'embedded', 'embedded', 'en', 'en', 'en', 'end', 'end', 'end', 'environment', 'environment', 'environment', 'environment', 'environment', 'environment', 'environment', 'environment', 'environment', 'essential', 'essential', 'essential', 'examination', 'examination', 'examination', 'examination', 'examination', 'examination', 'exercises', 'exercises', 'exercises', 'exercises', 'exercises', 'exercises', 'exercises', 'exercises', 'exercises', 'expected', 'expected', 'expected', 'features', 'features', 'features', 'feedback', 'feedback', 'feedback', 'final', 'final', 'final', 'formalisms', 'formalisms', 'formalisms', 'formalismsuse', 'formalismsuse', 'formalismsuse', 'forum', 'forum', 'forum', 'functional', 'functional', 'functional', 'functional', 'functional', 'functional', 'functional', 'functional', 'functional', 'functional', 'functional', 'functional', 'functional', 'functional', 'functional', 'functional', 'functional', 'functional', 'functional', 'functional', 'functional', 'fundamental', 'fundamental', 'fundamental', 'grötker', 'grötker', 'grötker', 'grötker', 'grötker', 'grötker', 'guide', 'guide', 'guide', 'guide', 'guide', 'guide', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'hardware', 'homework', 'homework', 'homework', 'hours', 'hours', 'hours', 'httpmoodleepflchcourseviewphpid=40', 'httpmoodleepflchcourseviewphpid=40', 'httpmoodleepflchcourseviewphpid=40', 'httpwwwdouloscomknowhowvhdl_designers_guidehttpwwwdouloscomknowhowsysveriloghttpwwwdouloscomknowhowsystemc', 'httpwwwdouloscomknowhowvhdl_designers_guidehttpwwwdouloscomknowhowsysveriloghttpwwwdouloscomknowhowsystemc', 'httpwwwdouloscomknowhowvhdl_designers_guidehttpwwwdouloscomknowhowsysveriloghttpwwwdouloscomknowhowsystemc', 'important', 'important', 'important', 'including', 'including', 'including', 'individual', 'individual', 'individual', 'integrated', 'integrated', 'integrated', 'introduced', 'introduced', 'introduced', 'introduction', 'introduction', 'introduction', 'issues', 'issues', 'issues', 'jantsch', 'jantsch', 'jantsch', 'jantschrtl', 'jantschrtl', 'jantschrtl', 'kaufmann', 'kaufmann', 'kaufmann', 'keywords', 'keywords', 'keywords', 'lab', 'lab', 'lab', 'language', 'language', 'language', 'language', 'language', 'language', 'language', 'language', 'language', 'languages', 'languages', 'languages', 'languages', 'languages', 'languages', 'layered', 'layered', 'layered', 'learning', 'learning', 'learning', 'learning', 'learning', 'learning', 'learning', 'learning', 'learning', 'lectures', 'lectures', 'lectures', 'lectures', 'lectures', 'lectures', 'level', 'level', 'level', 'level', 'level', 'level', 'level', 'level', 'level', 'levels', 'levels', 'levels', 'link', 'link', 'link', 'logic', 'logic', 'logic', 'methodologies', 'methodologies', 'methodologies', 'methodologies', 'methodologies', 'methodologies', 'methodology', 'methodology', 'methodology', 'methods', 'methods', 'methods', 'methods', 'methods', 'methods', 'midterm', 'midterm', 'midterm', 'model', 'model', 'model', 'model', 'model', 'model', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'modeling', 'models', 'models', 'models', 'models', 'models', 'models', 'modelsconstruct', 'modelsconstruct', 'modelsconstruct', 'modern', 'modern', 'modern', 'moodle', 'moodle', 'moodle', 'moodle', 'moodle', 'moodle', 'morgan', 'morgan', 'morgan', 'notes', 'notes', 'notes', 'noteshandbook', 'noteshandbook', 'noteshandbook', 'notion', 'notion', 'notion', 'nutshell', 'nutshell', 'nutshell', 'office', 'office', 'office', 'open', 'open', 'open', 'osvvm', 'osvvm', 'osvvm', 'outcomes', 'outcomes', 'outcomes', 'page', 'page', 'page', 'plan', 'plan', 'plan', 'portability', 'portability', 'portability', 'pp', 'pp', 'pp', 'prerequisites', 'prerequisites', 'prerequisites', 'principles', 'principles', 'principles', 'problems', 'problems', 'problems', 'processing', 'processing', 'processing', 'proper', 'proper', 'proper', 'proper', 'proper', 'proper', 'quiz', 'quiz', 'quiz', 'recommended', 'recommended', 'recommended', 'required', 'required', 'required', 'required', 'required', 'required', 'resources', 'resources', 'resources', 'ressources', 'ressources', 'ressources', 'reusable', 'reusable', 'reusable', 'review', 'review', 'review', 'rtl', 'rtl', 'rtl', 'rtl', 'rtl', 'rtl', 'rtl', 'rtl', 'rtl', 'rtl', 'rtl', 'rtl', 'rtl', 'rtl', 'rtl', 'rtl', 'rtl', 'rtl', 'scalability', 'scalability', 'scalability', 'scalable', 'scalable', 'scalable', 'sequential', 'sequential', 'sequential', 'soc', 'soc', 'soc', \"soc's\", \"soc's\", \"soc's\", \"soc's\", \"soc's\", \"soc's\", 'socs', 'socs', 'socs', 'socs', 'socs', 'socs', 'source', 'source', 'source', 'spear', 'spear', 'spear', 'spearmodeling', 'spearmodeling', 'spearmodeling', 'springer', 'springer', 'springer', 'springer', 'springer', 'springer', 'start', 'start', 'start', 'stateoftheart', 'stateoftheart', 'stateoftheart', 'student', 'student', 'student', 'student', 'student', 'student', 'supervision', 'supervision', 'supervision', 'synthesis', 'synthesis', 'synthesis', 'system', 'system', 'system', 'system', 'system', 'system', 'system', 'system', 'system', 'system', 'system', 'system', 'system', 'system', 'system', 'systemc', 'systemc', 'systemc', 'systemc', 'systemc', 'systemc', 'systemc', 'systemc', 'systemc', 'systemc', 'systemc', 'systemc', 'systemc', 'systemc', 'systemc', 'systemc', 'systemc', 'systemc', 'systemonchip', 'systemonchip', 'systemonchip', 'systems', 'systems', 'systems', 'systems', 'systems', 'systems', 'systems', 'systems', 'systems', 'systems', 'systems', 'systems', 'systems', 'systems', 'systems', 'systems', 'systems', 'systems', 'systemsonchip', 'systemsonchip', 'systemsonchip', 'systemsonchip', 'systemsonchip', 'systemsonchip', 'systemverilog', 'systemverilog', 'systemverilog', 'systemverilog', 'systemverilog', 'systemverilog', 'systemverilog', 'systemverilog', 'systemverilog', 'systemverilog', 'systemverilog', 'systemverilog', 'systemverilog', 'systemverilog', 'systemverilog', 'systemverilog', 'systemverilog', 'systemverilog', 'tasks', 'tasks', 'tasks', 'teaching', 'teaching', 'teaching', 'techniquesdevelop', 'techniquesdevelop', 'techniquesdevelop', 'testbench', 'testbench', 'testbench', 'tlm', 'tlm', 'tlm', 'tool', 'tool', 'tool', 'tools', 'tools', 'tools', 'transactionlevel', 'transactionlevel', 'transactionlevel', 'tumbush', 'tumbush', 'tumbush', 'untimed', 'untimed', 'untimed', \"user's\", \"user's\", \"user's\", 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'verification', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdl', 'vhdlsystemverilogsystemc', 'vhdlsystemverilogsystemc', 'vhdlsystemverilogsystemc', 'websites', 'websites', 'websites', 'wileyinterscience', 'wileyinterscience', 'wileyinterscience', 'work', 'work', 'work']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(sorted(courses_proc2[courses[9]['courseId']]))"
    ]
@@ -205,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -222,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -239,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -251,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -270,7 +286,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Print the 15 terms in the description of the IX class with the highest TF-IDF scores."
+    "### Print the 15 terms in the description of the $9^{th}$ class with the highest TF-IDF scores."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "TF = np.array([x / x.max() for x in X.T])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "IDF = np.ndarray(M)\n",
+    "for i in range(len(X)):\n",
+    "    count = 0\n",
+    "    for j in X[i]:\n",
+    "        if j > 0:\n",
+    "            count += 1\n",
+    "    IDF[i] = np.log2(N / count)"
    ]
   },
   {
@@ -280,7 +324,47 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "TFIDF = np.array([x * IDF for x in TF])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "IFIDF_9 = TFIDF[courses_index[courses[9]['courseId']]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "TFIDF_9_top15 = np.argsort(-IFIDF_9)[:15]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(\"TOP 15 TERMS FROM TFIDF\")\n",
+    "for i in TFIDF_9_top15:\n",
+    "    for k, v in words_index.items():\n",
+    "        if v == i:\n",
+    "            print(\" \", IFIDF_9[i], \":\", k)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -290,13 +374,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "TF gives the importance if a word in a document, between 0 and 1. 1 is the most frequent word, 0 means they never appear.\n",
+    "\n",
+    "IDF gives the frequency of a word in the corpus, bigger than 0. 0 means the word is in every description, infinity means it's in none of them.\n",
+    "\n",
+    "TFIDF then is simply the mutliplication of the two, where a high TFIDF means that word is frequent within the desctiption, but rare within the corpus."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -316,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
